# Easy_LLM_Watermark

./: README.md  pyproject.toml
pics/: 2.proposition.html  思考.psd
scripts/: 2.Proposition.ipynb  3.proposition.ipynb  4.LLM_Watermark.ipynb  有用なスクリプト.py
scripts/text/: 4.LLM_Watermark.ipynb  config.json  emoji.txt  吾輩は猫であるutf8.txt
src/: 0.あらすじ.md  1.preface.md  2.Motivation.md  3.Proposition.md  4.LLM_Watermark.md
